--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,7 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <property name="java-output-path" value="/com-sit-framework/target/classes"/>
-        <property name="context-root" value="com-sit-framework"/>
+        <property name="java-output-path" value="/msg-sending/target/classes"/>
+        <property name="context-root" value="msg-sending"/>
   </wb-module>
 </project-modules>
